[gd_scene load_steps=9 format=3 uid="uid://baq8t17uwobey"]

[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="1_xh4a7"]
[ext_resource type="FontFile" uid="uid://bne0sj7mkbf5r" path="res://Fonts/BEATTECH-Line.otf" id="2_j5p62"]
[ext_resource type="FontFile" uid="uid://cte2prvherq13" path="res://Fonts/Byciclette/fonts/fonnts.com-Bicyclette_Black.otf" id="3_btctt"]
[ext_resource type="Texture2D" uid="uid://bfu0c6f0k12ct" path="res://img/Nexus-logo.png" id="4_iil3u"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sgg0v"]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Theme" id="Theme_53qyc"]
default_font = ExtResource("2_j5p62")

[sub_resource type="Theme" id="Theme_vosiq"]
default_base_scale = 0.44

[sub_resource type="ButtonGroup" id="ButtonGroup_xncv2"]

[node name="pause_menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 16.0
offset_right = 3503.0
offset_bottom = 1170.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35205, 0.478118)
script = ExtResource("1_xh4a7")

[node name="MarginContainer" type="MarginContainer" parent="."]
light_mask = 7
texture_filter = 2
texture_repeat = 2
material = SubResource("CanvasItemMaterial_sgg0v")
use_parent_material = true
custom_minimum_size = Vector2(1.96, 0.52)
layout_mode = 0
offset_left = 1346.4
offset_top = 1158.71
offset_right = 2139.4
offset_bottom = 1393.71
scale = Vector2(3.57013, 2.87422)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Renaudar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_btctt")
theme_override_font_sizes/font_size = 19
text = "Reanudar"

[node name="Volver al menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_53qyc")
theme_override_fonts/font = ExtResource("3_btctt")
theme_override_font_sizes/font_size = 20
text = "Volver al menu"
text_overrun_behavior = 2

[node name="QUIT" type="Button" parent="MarginContainer/VBoxContainer"]
show_behind_parent = true
layout_mode = 2
theme = SubResource("Theme_vosiq")
theme_override_fonts/font = ExtResource("3_btctt")
theme_override_font_sizes/font_size = 20
button_group = SubResource("ButtonGroup_xncv2")
text = "Salir"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2729.73, 1093.87)

[node name="SinTÃ­tulo-1MesaDeTrabajo1" type="Sprite2D" parent="."]
position = Vector2(2692.8, 522.883)
scale = Vector2(1.08786, 0.754906)
texture = ExtResource("4_iil3u")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Renaudar" to="." method="_on_renaudar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Volver al menu" to="." method="_on_volver_al_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
